fixed overlapping css

--- a/owehub/gui/src/index.css
+++ b/owehub/gui/src/index.css
@@ -262,6 +262,7 @@ input[type='password']::-ms-clear {
   width: 48.5%;
 }
 .create-input-field {
+  position: relative;
   width: 30%;
 }
 .radio-container {
